# poc-intake

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PRD.txt  deploy-with-secrets.sh  deploy.bat  deploy.sh  intake.json  start-dev.bat  start-dev.ps1  start-dev.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.simple  Dockerfile.test  README.md  cloudbuild.yaml  debug_schema.py  find_unused_functions.py  main.py  pyproject.toml  refined_unused_analysis.py  requirements.txt  start.py  test_server.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  config_simple.py  database.py  token_manager.py
backend/app/models/: __init__.py  field_grouping.json  intake.json  intake_demographics.json  intake_insurance.json  intake_medical_history.json  intake_schemas.py  intake_weight_history.json
backend/app/repositories/: __init__.py  chat_history_repository.py  intake_repository.py
backend/app/routers/: __init__.py  chat.py  debug.py  intake.py
backend/app/scripts/: get_charm_token.py
backend/app/services/: conversation_state_manager.py  ehr_service.py  (+2 more)
backend/tests/: test_actual_data.py  test_agent.py  test_agent_simple.py  test_allergies_only.py  test_basic_api_connectivity.py  test_charm_url.py  test_diagnosis_push.py  test_field_paths.py  test_fields.py  test_fields_simple.py  test_headers_comparison.py  test_medical_history_push.py  test_no_known_allergies.py  test_push_demographics.py  test_simple_medical_history.py  test_simplified_logic.py  test_specific_medical_api.py  test_token_manager.py  test_weight_history_push.py
(+44 files in other folders)
